Strip DuckDB, polars, Java and TypeScript from CI and the benchmarks
Fifteen workflows become seven, and the two that run on every push finish in
a couple of minutes because neither needs a toolchain other than its own.

The comparison those implementations existed to settle is settled: on ten
million rows the byte-level ports are between one and two orders of magnitude
faster than the dataframe engines, and the C port holds its whole working set
within about 130 MB of its input. Re-confirming that on every push is time
taken from the checks that can still fail.

What goes:

  * ci.yml, compare.yml and benchmark.yml, which all began `pip install -e .`
    and so ran the DuckDB engine;
  * ci-java.yml, benchmark-java.yml, ci-ts.yml, benchmark-ts.yml,
    compare-ts.yml;
  * benchmark-formats.yml, folded into the new benchmark-native.yml;
  * the duckdb and polars engine legs from ci-rust.yml and ci-go.yml, and the
    duckdb default from the two on-demand benchmarks. The Rust and Zig ports
    themselves are untouched -- they are another agent's lane, and only the
    superseded engine variants stop being exercised;
  * scripts/bench.py, bench_external.py, bench_formats.py, bench_parquet.py,
    bench_formats_native.py and min_heap.sh, and the JVM legs of
    bench_native.py.

What arrives:

  * benchmark-native.yml, the one benchmark. Two leading ports across all three
    formats on every push; Rust and Zig as well on `workflow_dispatch`, at any
    row count. It generates each format, measures it and deletes it before the
    next, because at ten million rows all three at once is more than a runner
    has.
  * parity.yml rewritten native-only. It used to build five implementations and
    spend most of its wall clock installing toolchains for engines that no
    longer compete; it now asks the narrower question still capable of failing
    -- do the byte-level ports agree, on a file none of them generated for
    itself. The dataset comes from c/gen-data.
  * ci-